--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Add the name of your business between the title tags and in the meta tag named 'title.' This will help search engines make your page discoverable by other people on the web.-->
 
-    <title>Mavis Tseng </title>
+    <title>Mavis Tseng's Page </title>
 
     <meta name="title" author="Mavis Tseng">
     <meta name="author" content="Mozilla">
